--- a/slides/TeX/bayesian_data_analysis.tex
+++ b/slides/TeX/bayesian_data_analysis.tex
@@ -118,7 +118,7 @@
 			the late \nth{20} century
 
 		\item However, their potential practical advantage over
-			classical methods was that the could be applied in
+			classical methods was that they could be applied in
 			principle to any problem where a probabilistic model of
 			data could be specified.  
 
@@ -136,7 +136,7 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Inference using Bayes's rule}
+	\frametitle{Inference using Bayes's rule: General principle}
 	\begin{itemize}
 
 		\item In any statistical model, we assume a probabilistic \emph{generative model} of the data being analyzed.
@@ -168,12 +168,12 @@
 	\texttt{http://bit.ly/1BOKx4Q} for discussion.}}
 
 	\begin{itemize}
-		\item A sample of $n=250$ coin tosses can be modelled as $n$ independent and identically dsibution Bernoulli random variables with parameter $\theta$.
+		\item A sample of $n=250$ coin tosses can be modelled as $n$ independent and identically distributed Bernoulli random variables with parameter $\theta$.
 		\item In other words, our probabilitic model is
 			\[
 				x_i \sim \textrm{Bernoulli}(\theta),\quad\text{for $i \in \{1,2\ldots n\}$.}
 			\]
-			and we would like to inference the probable values of $\theta$ given an observation of $m=139$ (or $m=140$, etc.).
+			and we would like to infer the probable values of $\theta$ given an observation of $m=139$ (or $m=140$, etc.).
 	\end{itemize}
 \end{frame}
 \begin{frame}
